# image2text

./: CHANGELOG.md  Cargo.toml  README.md
src/: app.rs  lib.rs  main.rs  seract.rs
